implement type-untrusted-text